src/test/ui/error-codes/E0439.stderr
error[E0439]: invalid `simd_shuffle`, needs length: `simd_shuffle`
  --> $DIR/E0439.rs:4:5
   |
LL |     fn simd_shuffle<A,B>(a: A, b: A, c: [u32; 8]) -> B;
   |     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

error: aborting due to previous error

For more information about this error, try `rustc --explain E0439`.
